--- a/jupyter/introduction.ipynb
+++ b/jupyter/introduction.ipynb
@@ -18,21 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello cosmology\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print \"Hello cosmology\""
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -78,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -87,15 +81,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "1\n"
      ]
     }
    ],
    "source": [
     "x = 5\n",
-    "y = 10\n",
+    "y = 1\n",
     "z = y % x\n",
     "print z\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = x / y\n",
+    "print h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.36655395  0.46761322  0.54238064  0.5914257   0.62543268  0.66333769\n",
+      "  0.69132455  0.71820021  0.74790156]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 299792458\n",
+    "cmeas = np.array([109890109.9, 140186915.9, 162601626, 177304964.5, 187500000, 198863636.4, 207253886, 215311004.8, 224215246.6]) \n",
+    "cfin = cmeas/c\n",
+    "print cfin"
    ]
   },
   {
@@ -109,8 +146,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -124,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
