Update 425 HW 3 - Winnie Wang.ipynb

--- a/Students/WinnieWang/425 HW 3 - Winnie Wang.ipynb
+++ b/Students/WinnieWang/425 HW 3 - Winnie Wang.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "##### 425 Homework 3\n",
     "\n",
-    "##### Winnie Wang, Prof. Andrew Connelly"
+    "##### Winnie Wang, Prof. Andrew Connolly"
    ]
   },
   {
