adding Homework4 Part1

--- a/Students/DanielleSkinner/Homework_4_Part1.ipynb
+++ b/Students/DanielleSkinner/Homework_4_Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +270,6 @@
     "conv = 3.085677581e+19 # _km = 1 Mpc \n",
     "vel = 880 * (1/conv)\n",
     "avg_time = (avg_dist / vel) / (31557600000000000) #Gyrs\n",
-    "H_time = 14.0\n",
     "print 'Average time between collisions = ', avg_time, 'Gyrs. This is longer than the Hubble time!'\n",
     "\n",
     "#Collision time between Andromeda and the Milky Way:\n",
@@ -279,6 +278,15 @@
     "print '\\n'\n",
     "print 'Andromeda will collide with the Milky way in 5.7 Gigayears, a little less than half the hubble time, compared with the collision time for a galaxy in the Coma cluster, which is 15 Gigayears, longer than the hubble time. '\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
