Submitting Homework 5 - Locke

--- a/Students/LockePatton/Homework_2_LockePatton.ipynb
+++ b/Students/LockePatton/Homework_2_LockePatton.ipynb
@@ -294,7 +294,7 @@
     "$$\\dot{a}^{2}(x) = H_{0}^{2}a^{-3}$$\n",
     "##### where $H_o$ is the Hubble constant ($H_o = 70\\, \\frac{km}{s\\,Mpc}$).\n",
     "\n",
-    "To determine a(t) numerically, first I define H_o. Then I define $\\dot{a}$ as a function of a and t (here defined as hubble). Then use scipy.integrate.odeint to find numerical solution."
+    "To determine a(t) numerically, first I define $H_o$. Then I define $\\dot{a}$ as a function of a and t (here defined as hubble). Then use scipy.integrate.odeint to find numerical solution."
    ]
   },
   {
